[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chainswarm-core"
version = "0.1.1"
description = "Shared constants and utilities for ChainSwarm blockchain analytics projects"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.13"
authors = [
    { name = "ChainSwarm Team" }
]
keywords = ["blockchain", "analytics", "chainswarm", "clickhouse", "risk-scoring"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "clickhouse-connect>=0.7.0",
    "loguru>=0.7.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/chainswarm/core"
Repository = "https://github.com/chainswarm/core"
Documentation = "https://github.com/chainswarm/core#readme"
Changelog = "https://github.com/chainswarm/core/blob/main/CHANGELOG.md"

# Enable editable installs with src layout - this makes `pip install -e .` work properly
[tool.hatch.build]
dev-mode-dirs = ["src"]

[tool.hatch.build.targets.sdist]
include = ["/src"]

[tool.hatch.build.targets.wheel]
packages = ["src/chainswarm_core"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v"

[tool.coverage.run]
source = ["src/chainswarm_core"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]